--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -32,13 +32,16 @@ jobs:
   trivy-scan:
     name: Trivy Security Scan
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Run Trivy vulnerability scanner (filesystem)
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.33.1
         with:
           scan-type: 'fs'
           scan-ref: '.'
@@ -54,7 +57,7 @@ jobs:
           category: 'trivy-filesystem'
 
       - name: Run Trivy vulnerability scanner (summary)
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.33.1
         with:
           scan-type: 'fs'
           scan-ref: '.'
@@ -64,6 +67,9 @@ jobs:
   npm-audit-frontend:
     name: NPM Audit - Frontend
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
 
     steps:
       - name: Checkout code
@@ -94,6 +100,9 @@ jobs:
   npm-audit-backend:
     name: NPM Audit - Backend
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
 
     steps:
       - name: Checkout code
@@ -158,6 +167,9 @@ jobs:
   secrets-scan:
     name: Secret Scanning
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
 
     steps:
       - name: Checkout code
@@ -166,7 +178,7 @@ jobs:
           fetch-depth: 0
 
       - name: TruffleHog OSS
-        uses: trufflesecurity/trufflehog@main
+        uses: trufflesecurity/trufflehog@v3.91.1
         with:
           path: ./
           base: ${{ github.event.repository.default_branch }}
@@ -205,6 +217,9 @@ jobs:
     name: Docker Image Security Scan
     runs-on: ubuntu-latest
     if: github.event_name != 'schedule'
+    permissions:
+      contents: read
+      security-events: write
 
     steps:
       - name: Checkout code
@@ -223,7 +238,7 @@ jobs:
           load: true
 
       - name: Run Trivy on Docker image
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.33.1
         with:
           image-ref: navikid-backend:scan
           format: 'sarif'
@@ -241,6 +256,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [trivy-scan, npm-audit-frontend, npm-audit-backend, secrets-scan, license-check]
     if: always()
+    permissions:
+      contents: read
+      security-events: write
 
     steps:
       - name: Generate security summary
@@ -257,7 +275,28 @@ jobs:
 
       - name: Check for failures
         run: |
+          # Fail the workflow if any of the upstream security jobs reported a failure
+          if [[ "${{ needs.trivy-scan.result }}" == "failure" ]]; then
+            echo "::error::Trivy scan detected critical findings"
+            exit 1
+          fi
+
+          if [[ "${{ needs.npm-audit-frontend.result }}" == "failure" ]]; then
+            echo "::error::NPM audit (frontend) reported failures"
+            exit 1
+          fi
+
+          if [[ "${{ needs.npm-audit-backend.result }}" == "failure" ]]; then
+            echo "::error::NPM audit (backend) reported failures"
+            exit 1
+          fi
+
           if [[ "${{ needs.secrets-scan.result }}" == "failure" ]]; then
             echo "::error::Secret scan detected potential secrets in the repository"
             exit 1
+          fi
+
+          if [[ "${{ needs.license-check.result }}" == "failure" ]]; then
+            echo "::warning::License check reported issues requiring review"
+            # do not fail strictly for license findings, but warn
           fi
