--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-  "build": "tsc -p tsconfig.build.json",
+    "build": "tsc -p tsconfig.build.json",
     "postbuild": "cp -R src/database/migrations dist/database/migrations && cp -R src/database/seeds dist/database/seeds || true",
     "start": "node dist/server.js",
     "start:prod": "NODE_ENV=production node dist/server.js",
@@ -15,11 +15,11 @@
     "test": "jest --runInBand",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-  "test:integration:local": "bash ../scripts/run-integration-local.sh",
-  "test:integration": "jest __tests__/integration --runInBand --passWithNoTests",
+    "test:integration:local": "bash ../scripts/run-integration-local.sh",
+    "test:integration": "jest __tests__/integration --runInBand --passWithNoTests",
     "lint": "eslint src --ext .ts --config ./.eslintrc.cjs",
     "lint:fast": "eslint \"src/**/*.{ts,tsx}\" --cache --cache-location .cache/eslint/backend-fast --config ./.eslintrc.cjs",
-  "lint:ci": "ESLINT_TYPECHECK=true eslint src --ext .ts --max-warnings=0 --config ./.eslintrc.cjs",
+    "lint:ci": "ESLINT_TYPECHECK=true eslint src --ext .ts --max-warnings=0 --config ./.eslintrc.cjs",
     "format": "prettier --write \"src/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\"",
     "typecheck": "tsc --noEmit"
@@ -37,16 +37,18 @@
   "private": true,
   "dependencies": {
     "@fastify/cors": "^9.0.1",
-    "@fastify/websocket": "^8.0.0",
     "@fastify/helmet": "^11.1.1",
     "@fastify/jwt": "^8.0.1",
     "@fastify/rate-limit": "^9.1.0",
     "@fastify/sensible": "^5.6.0",
+    "@fastify/websocket": "^8.0.0",
     "@sentry/node": "^7.109.0",
     "bcrypt": "^5.1.1",
+    "body-parser": "^2.2.1",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "ioredis": "^5.4.1",
+    "micromatch": "^4.0.8",
     "pg": "^8.11.5",
     "pino": "^9.0.0",
     "pino-pretty": "^11.0.0",
@@ -57,14 +59,14 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
     "@types/pg": "^8.11.5",
-  "@typescript-eslint/eslint-plugin": "^8.46.4",
-  "@typescript-eslint/parser": "^8.46.4",
-  "eslint": "^9.39.1",
+    "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "@typescript-eslint/parser": "^8.46.4",
+    "eslint": "^9.39.1",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
     "tsx": "^4.7.2",
-  "typescript": "^5.9.3"
+    "typescript": "^5.9.3"
   },
   "engines": {
     "node": ">=18.0.0",
