--- a/package.json
+++ b/package.json
@@ -65,54 +65,54 @@
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.3",
     "@fastify/websocket": "^11.2.0",
-    "@gorhom/bottom-sheet": "^5.2.6",
-    "@maplibre/maplibre-react-native": "^10.4.0",
+    "@gorhom/bottom-sheet": "^5.2.7",
+    "@maplibre/maplibre-react-native": "^10.4.1",
     "@nkzw/create-context-hook": "^1.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "11.4.1",
-    "@react-navigation/native": "^7.1.19",
-    "@sentry/react-native": "^7.6.0",
-    "@supabase/supabase-js": "^2.81.1",
-    "@tanstack/react-query": "^5.90.8",
-    "expo": "^54.0.23",
+    "@react-navigation/native": "^7.1.22",
+    "@sentry/react-native": "^7.7.0",
+    "@supabase/supabase-js": "^2.86.0",
+    "@tanstack/react-query": "^5.90.11",
+    "expo": "^54.0.25",
     "expo-application": "~7.0.7",
-    "expo-audio": "^1.0.14",
+    "expo-audio": "^1.0.15",
     "expo-battery": "^10.0.7",
     "expo-blur": "~15.0.7",
     "expo-camera": "^17.0.9",
     "expo-constants": "^18.0.10",
     "expo-crypto": "~15.0.7",
-    "expo-dev-client": "^6.0.17",
+    "expo-dev-client": "^6.0.18",
     "expo-device": "~8.0.9",
-    "expo-font": "~14.0.8",
+    "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "^3.0.10",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
-    "expo-linking": "~8.0.8",
+    "expo-linking": "~8.0.9",
     "expo-location": "~19.0.7",
-    "expo-modules-autolinking": "^3.0.21",
-    "expo-notifications": "~0.32.12",
-    "expo-router": "^6.0.14",
+    "expo-modules-autolinking": "^3.0.22",
+    "expo-notifications": "~0.32.13",
+    "expo-router": "^6.0.15",
     "expo-secure-store": "~15.0.7",
     "expo-speech": "~14.0.7",
-    "expo-splash-screen": "~31.0.10",
+    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "^6.0.8",
     "expo-task-manager": "^14.0.8",
-    "expo-updates": "~29.0.12",
+    "expo-updates": "~29.0.13",
     "expo-web-browser": "^15.0.9",
     "glob": "^11.1.0",
     "gtfs-realtime-bindings": "^1.1.1",
-    "lucide-react-native": "^0.553.0",
-    "nativewind": "^4.1.23",
+    "lucide-react-native": "^0.555.0",
+    "nativewind": "^4.2.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-native": "^0.82.1",
     "react-native-gesture-handler": "^2.29.1",
-    "react-native-mmkv": "^4.0.0",
-    "react-native-nitro-modules": "^0.31.6",
+    "react-native-mmkv": "^4.0.1",
+    "react-native-nitro-modules": "^0.31.10",
     "react-native-reanimated": "^4.1.5",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
@@ -121,9 +121,9 @@
     "react-native-web": "^0.21.2",
     "react-native-webview": "^13.16.0",
     "react-native-worklets": "^0.6.1",
+    "tmp": "^0.2.5",
     "uuid": "^13.0.0",
-    "zustand": "^5.0.2",
-    "tmp": "^0.2.5"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
@@ -131,7 +131,7 @@
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-typescript": "^7.28.5",
     "@expo/config": "^12.0.10",
-    "@expo/ngrok": "^4.1.0",
+    "@expo/ngrok": "^4.1.3",
     "@react-native-community/cli": "^20.0.2",
     "@react-native/metro-config": "^0.82.1",
     "@testing-library/react-hooks": "^8.0.1",
@@ -139,11 +139,11 @@
     "@types/geojson": "^7946.0.16",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.10.1",
-    "@types/react": "^19.2.4",
+    "@types/react": "^19.2.7",
     "@types/react-test-renderer": "^19.1.0",
-    "@typescript-eslint/eslint-plugin": "^8.46.4",
-    "@typescript-eslint/parser": "^8.46.4",
-    "@xmldom/xmldom": "^0.8.4",
+    "@typescript-eslint/eslint-plugin": "^8.48.0",
+    "@typescript-eslint/parser": "^8.48.0",
+    "@xmldom/xmldom": "^0.8.11",
     "actionlint": "^2.0.6",
     "babel-jest": "^30.2.0",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -161,12 +161,12 @@
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "jest-junit": "^16.0.0",
-    "lint-staged": "^14.0.0",
+    "lint-staged": "^14.0.1",
     "lru-cache": "^11.2.2",
     "metro-react-native-babel-preset": "^0.77.0",
-    "prom-client": "^15.0.0",
-    "react-test-renderer": "^19.1.0",
-    "rimraf": "^6.1.0",
+    "prom-client": "^15.1.3",
+    "react-test-renderer": "^19.2.0",
+    "rimraf": "^6.1.2",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.5",
     "tsx": "^4.20.6",
