--- a/package.json
+++ b/package.json
@@ -193,5 +193,13 @@
       "eslint_d --cache --cache-location .cache/eslint/backend-fast --ext .ts,.tsx --config backend/.eslintrc.cjs"
     ]
   },
-  "private": true
+  "private": true,
+  "overrides": {
+    "glob": "11.1.0",
+    "node-forge": "1.3.2"
+  },
+  "resolutions": {
+    "glob": "11.1.0",
+    "node-forge": "1.3.2"
+  }
 }
