--- a/package.json
+++ b/package.json
@@ -182,5 +182,12 @@
     ]
   },
   "private": true,
-  "overrides": {}
+  "overrides": {
+    "glob": "11.1.0",
+    "node-forge": "1.3.2"
+  },
+  "resolutions": {
+    "glob": "11.1.0",
+    "node-forge": "1.3.2"
+  }
 }
