--- a/package.json
+++ b/package.json
@@ -101,12 +101,13 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "^6.0.8",
     "expo-task-manager": "^14.0.8",
-    "expo-updates": "~29.0.13",
+    "expo-updates": "^29.0.13",
     "expo-web-browser": "^15.0.9",
-    "glob": "^11.1.0",
+    "glob": "11.1.0",
     "gtfs-realtime-bindings": "^1.1.1",
     "lucide-react-native": "^0.555.0",
     "nativewind": "^4.2.1",
+    "node-forge": "1.3.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-native": "^0.82.1",
