--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_OPTIONS=\"--experimental-specifier-resolution=node\" expo start",
     "preinstall": "node ./scripts/check-node-version.cjs && node ./scripts/check-no-maps.cjs",
-    "postinstall": "node ./scripts/apply-test-exclude-patch.js || true",
+    "postinstall": "patch-package || node ./scripts/apply-test-exclude-patch.js || true",
     "start:clean": "rimraf node_modules/.cache .expo && expo start --clear",
     "start:web": "expo start --web",
     "start:ios": "expo start --ios",
@@ -166,6 +166,7 @@
     "lint-staged": "^14.0.1",
     "lru-cache": "^11.2.2",
     "metro-react-native-babel-preset": "^0.77.0",
+    "patch-package": "^6.5.1",
     "prom-client": "^15.1.3",
     "react-test-renderer": "^19.2.0",
     "rimraf": "^6.1.2",
