Refactor logging to use centralized logger utility
- Updated console logging statements across various components and services to utilize a centralized logger utility for improved consistency and structured logging.
- Replaced console.log, console.warn, and console.error with logger.info, logger.warn, and logger.error respectively in components such as InteractiveMap, ParentDashboard, SafetyDashboard, SmartRouteSuggestions, and others.
- Enhanced error handling in geofence events and backend connection testing scripts to provide clearer logging.
- Adjusted test files to reflect changes in logging behavior.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start:web": "expo start --web",
     "start:ios": "expo start --ios",
     "start:android": "expo start --android",
-    "test": "jest",
+    "test": "BABEL_DISABLE_MODULE_RESOLVER=1 jest",
     "test:watch": "jest --watch",
     "test:logic": "jest --roots ./__tests__",
     "test:logic:watch": "jest --roots ./__tests__ --watch",
