feat: enhance parental link checks with new fixture tests and Jest configurations

--- a/.github/workflows/parental-linker-check.yml
+++ b/.github/workflows/parental-linker-check.yml
@@ -26,12 +26,18 @@ jobs:
 
       - name: Run focused instrumented Jest (produce .test-debug/instrumented-events.log)
         id: run-tests
+        env:
+          TEST_DEBUG_CLEAR: '1'
         run: |
           set -euo pipefail
           JEST_EXIT=0
           # run the focused test; capture non-zero exit but continue so we can always produce the linker report
           BABEL_DISABLE_MODULE_RESOLVER=1 npx jest __tests__/parental-auth-security.test.ts --runInBand --setupFiles=./.test-debug/jest-log-timestamps.cjs --setupFiles=./.test-debug/logger-wrap.cjs --detectOpenHandles --verbose || JEST_EXIT=$?
           echo "jest_exit=$JEST_EXIT" >> $GITHUB_OUTPUT
+
+      - name: Run linker fixture tests
+        run: |
+          node .test-debug/run-linker-fixtures.cjs
 
       - name: Run linker and create JSON report
         run: |
