--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -4,7 +4,9 @@
     "ecmaVersion": 2022,
     "sourceType": "module"
   },
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+  "extends": 
+    ["eslint:recommended",
+    "plugin:@typescript-eslint/recommended"],
   "plugins": ["@typescript-eslint"],
   "env": {
     "node": true,
