fix: Exclude backend from root TypeScript type checking
The backend has its own tsconfig and dependencies. The root typecheck should only validate the frontend (app, components, hooks, utils) to avoid dependency resolution conflicts.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": ["**/*.ts", "**/*.tsx", "**/*.d.ts"],
-  "exclude": ["templates/**", "node_modules/**"],
+  "exclude": ["backend/**", "templates/**", "node_modules/**"],
   "extends": "expo/tsconfig.base"
 }
