--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@tanstack/react-query": "^5.90.11",
     "expo": "^54.0.25",
     "expo-application": "~7.0.7",
+    "expo-asset": "~12.0.10",
     "expo-audio": "^1.0.15",
     "expo-battery": "^10.0.7",
     "expo-blur": "~15.0.7",
@@ -94,7 +95,6 @@
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.9",
     "expo-location": "~19.0.7",
-    "expo-modules-autolinking": "^3.0.22",
     "expo-notifications": "~0.32.13",
     "expo-router": "^6.0.15",
     "expo-secure-store": "~15.0.7",
@@ -165,10 +165,10 @@
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "jest-junit": "^16.0.0",
-    "lint-staged": "^14.0.1",
+    "lint-staged": "^16.2.7",
     "lru-cache": "^11.2.2",
     "metro-react-native-babel-preset": "^0.77.0",
-    "patch-package": "^6.5.1",
+    "patch-package": "^8.0.1",
     "prettier": "^3.7.4",
     "prom-client": "^15.1.3",
     "react-test-renderer": "^19.2.0",
