--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "@tanstack/react-query": "^5.90.11",
     "expo": "^54.0.25",
     "expo-application": "~7.0.7",
-    "expo-asset": "~12.0.11",
+    "expo-asset": "~12.0.10",
     "expo-audio": "^1.0.15",
     "expo-battery": "^10.0.7",
     "expo-blur": "~15.0.7",
@@ -168,7 +168,8 @@
     "lint-staged": "^16.2.7",
     "lru-cache": "^11.2.2",
     "metro-react-native-babel-preset": "^0.77.0",
-    "patch-package": "^6.5.1",
+    "patch-package": "^8.0.1",
+    "prettier": "^3.7.4",
     "prom-client": "^15.1.3",
     "react-test-renderer": "^19.2.0",
     "rimraf": "^6.1.2",
