--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -20,8 +20,7 @@
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
-    "types": ["node", "jest"],
-    "typeRoots": ["./src/types", "./node_modules/@types"]
+    "types": ["node", "jest"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
