fix: Update backend jest config to use new ts-jest transform format and add isolatedModules to suppress TS151002 warnings

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -19,6 +19,7 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
+    "isolatedModules": true,
     "types": ["node", "jest"]
   },
   "include": ["src/**/*"],
