--- a/.github/workflows/parental-linker-check.yml
+++ b/.github/workflows/parental-linker-check.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: [ main ]
   pull_request:
+    branches: [ main ]
     paths:
       - '**/*.ts'
       - '.test-debug/**'
@@ -19,7 +20,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '22'
 
       - name: Install dependencies
         run: npm ci
